--- a/pubman/pubman_presentation/src/main/webapp/home/StartPageLoggedOut.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/home/StartPageLoggedOut.jspf
@@ -55,7 +55,7 @@
 		<input id="btnGo" class="xSmall_txtBtn activeButton quickSearchBtn" value="Go" style="float: left;" type="button" onclick="$('#searchMenuSkipLinkAnchor').find('.quickSearchTextInput').val( $(this).parents('.searchMenu').find('.quickSearchTextInput').val() ); $('#searchMenuSkipLinkAnchor').find('.quickSearchBtn').click();"/>
 	</p>
 	<br/><br/>
-	<a onclick="$('#searchMenuSkipLinkAnchor').find('.organisationSearchMenu').click();">... or search for publications by organization</a>
+	<a onclick="$('#searchMenuSkipLinkAnchor').find('.organisationSearchMenu').click();">... or browse through different categories.</a>
 	<br/><br/>
 	<h2>
 	Short PubMan Introduction Video
@@ -97,7 +97,7 @@
 		<input id="btnLos" class="xSmall_txtBtn activeButton quickSearchBtn" value="Los" style="float: left;" type="button" onclick="$('#searchMenuSkipLinkAnchor').find('.quickSearchTextInput').val( $(this).parents('.searchMenu').find('.quickSearchTextInput').val() ); $('#searchMenuSkipLinkAnchor').find('.quickSearchBtn').click();">
 	</p>
 	<br/><br/>
-	<a onclick="$('#searchMenuSkipLinkAnchor').find('.organisationSearchMenu').click();">... oder gehen Sie zur Organisationssuche</a>
+	<a onclick="$('#searchMenuSkipLinkAnchor').find('.organisationSearchMenu').click();">... oder browsen Sie durch verschiedene Kategorien.</a>
 	<br/><br/>
 	<h2>
 	PubMan Einf&uuml;hrungsvideo
