--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step3Import.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step3Import.jspf
@@ -40,7 +40,7 @@
 
 		<div id="contentSkipLinkAnchor" class="clear headLine">
 			<!-- Headline starts here -->
-			<h1><h:outputText value="#{lbl.submission_lnkImport}"/></h1>
+			<h1><h:outputText value="#{lbl.EasySubmission_lblFetchMetadata}"/></h1>
 			<!-- Headline ends here -->
 		</div>
 	</div>
@@ -57,7 +57,7 @@
 				</h:commandLink>
 				<h:outputText styleClass="seperator void" />
 				<span>
-					<h:outputText value="#{lbl.submission_lnkImport}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
+					<h:outputText value="#{lbl.EasySubmission_lblFetchMetadata}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
 				</span>
 				<h:outputText styleClass="seperator void" />
 				<h:commandLink id="lnkMultipleImport" title="#{tip.submission_lnkMultipleImport}" action="#{MultipleImport.newImport}">
@@ -103,7 +103,7 @@
 	<div class="full_area0 fullItem">
 		<div class="full_area0 itemBlock noTopBorder">
 			<h3 class="xLarge_area0_p8 endline blockHeader">
-				<h:outputText value="#{lbl.EasySubmission_lblImportMetadata}"/>
+				<h:outputText value="#{lbl.EasySubmission_lblFetchMetadata}"/>
 			</h3>
 			<span class="seperator"></span>
 			<div class="free_area0 itemBlockContent endline">
