--- a/pubman/pubman_presentation/src/main/webapp/editItem/LocatorsGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/LocatorsGroup.jspf
@@ -50,7 +50,7 @@
 					<h:inputText id="inpAddUrl" styleClass="quad_txtInput" value="#{locator.locator}" />
 				</span>
 				<span class="large_area0_p8 lineToolSection">
-					<tr:commandButton id="btnSaveUrl" styleClass="free_txtBtn groupBtn" text="#{lbl.EditItem_lnkSave}" shortDesc="#{tip.EditItem_lnkSave}" action="#{EditItem.saveLocator}" />
+					<tr:commandButton id="btnSaveUrl" styleClass="free_txtBtn groupBtn" text="#{lbl.EditItem_lnkSaveURL}" shortDesc="#{tip.EditItem_lnkSave}" action="#{EditItem.saveLocator}" />
 				</span>
 			</h:panelGroup>
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine" rendered="#{(locator.locator == null || locator.locator == '') && locator.index > 0 }" >
