--- a/pubman/pubman_presentation/src/main/webapp/home/StartPageLoggedIn.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/home/StartPageLoggedIn.jspf
@@ -196,7 +196,7 @@
 		<br/>
 	  ... 
 		<h:commandLink id="lnkImport_jp" title="#{tip.submission_lnkImport}" action="#{EasySubmission.newImport}">
-			<h:outputText value="#{lbl.submission_lnkImport}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
+			<h:outputText value="#{lbl.EasySubmission_lblFetchMetadata}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
 		</h:commandLink>
 		<br/>
 	  ... 
