--- a/pubman/pubman_presentation/src/main/webapp/home/StartPageLoggedIn.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/home/StartPageLoggedIn.jspf
@@ -43,8 +43,8 @@
 	<h2>Submission</h2>      	
           <b>Enter a new Publication to PubMan?</b><br/>
 	   ... by using the 
-		<h:commandLink id="lnkEasySubmission_en" title="#{tip.submission_lnkEasySubmission}" action="#{EasySubmission.newEasySubmission}">
-			<h:outputText value="#{lbl.submission_lnkEasySubmission}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
+		<h:commandLink id="lnkEasySubmission_en" title="#{tip.submission_lnkNewSubmission}" action="#{EasySubmission.newEasySubmission}">
+			<h:outputText value="#{lbl.Home_Link_EasySub}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
 		</h:commandLink>
 		<br/>
 	  ... by 
@@ -54,7 +54,7 @@
 		<br/>
 	  ... by using the 
 		<h:commandLink id="lnkNewSubmission_en" title="#{tip.submission_lnkNewSubmission}" action="#{CreateItem.newSubmission}" immediate="true">
-			<h:outputText value="#{lbl.submission_lnkNewSubmission}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}" />
+			<h:outputText value="#{lbl.Home_Link_FullSub}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}" />
 		</h:commandLink>
     </span>
 	</h:panelGroup>
@@ -117,8 +117,8 @@
 	<h2>Dateneingabe</h2>      	
           <b>Wollen Sie eine neue Publikation eingeben?</b><br/>
 	   ... benutzen Sie die 
-		<h:commandLink id="lnkEasySubmission_de" title="#{tip.submission_lnkEasySubmission}" action="#{EasySubmission.newEasySubmission}">
-			<h:outputText value="#{lbl.submission_lnkEasySubmission}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
+		<h:commandLink id="lnkEasySubmission_de" title="#{tlt.submission_lnkEasySubmission}" action="#{EasySubmission.newEasySubmission}">
+			<h:outputText value="#{lbl.Home_Link_EasySub}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
 		</h:commandLink>
 		<br/>
 	  ... den 
@@ -128,7 +128,7 @@
 		<br/>
 	  ... oder die 
 		<h:commandLink id="lnkNewSubmission_de" title="#{tip.submission_lnkNewSubmission}" action="#{CreateItem.newSubmission}" immediate="true">
-			<h:outputText value="#{lbl.submission_lnkNewSubmission}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}" />
+			<h:outputText value="#{lbl.Home_Link_FullSub}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}" />
 		</h:commandLink>
     </span>
 	</h:panelGroup>
@@ -190,8 +190,8 @@
 	<h2>新規登録</h2>      	
           <b>文献資料をPubManへ登録する</b><br/>
 	   ... 
-		<h:commandLink id="lnkEasySubmission_jp" title="#{tip.submission_lnkEasySubmission}" action="#{EasySubmission.newEasySubmission}">
-			<h:outputText value="#{lbl.submission_lnkEasySubmission}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
+		<h:commandLink id="lnkEasySubmission_jp" title="#{tlt.submission_lnkEasySubmission}" action="#{EasySubmission.newEasySubmission}">
+			<h:outputText value="#{lbl.Home_Link_EasySub}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
 		</h:commandLink>
 		<br/>
 	  ... 
@@ -200,7 +200,7 @@
 		</h:commandLink>
 		<br/>
 	  ... 
-		<h:commandLink id="lnkNewSubmission_jp" title="#{tip.submission_lnkNewSubmission}" action="#{CreateItem.newSubmission}" immediate="true">
+		<h:commandLink id="lnkNewSubmission_jp" title="#{lbl.Home_Link_FullSub}" action="#{CreateItem.newSubmission}" immediate="true">
 			<h:outputText value="#{lbl.submission_lnkNewSubmission}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}" />
 		</h:commandLink>
     </span>
