--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step3Import.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step3Import.jspf
@@ -103,7 +103,8 @@
 	<div class="full_area0 fullItem">
 		<div class="full_area0 itemBlock noTopBorder">
 			<h3 class="xLarge_area0_p8 endline blockHeader">
-				<h:outputText value="#{lbl.EasySubmission_lblFetchMetadata}"/>
+				<h:outputText value="#{lbl.EasySubmission_lblFetchMetadata}" rendered="#{EasySubmission.disableBibtexFields}"/>
+				<h:outputText value="#{lbl.EasySubmission_lblImportMetadata}" rendered="#{EasySubmission.disableExternalFields}"/>
 			</h3>
 			<span class="seperator"></span>
 			<div class="free_area0 itemBlockContent endline">
@@ -162,7 +163,10 @@
 </div>
 <div class="full_area0 formButtonArea">		
 	<h:outputLink id="lnkCancel" styleClass="free_area1_p8 cancelButton xLarge_marginLIncl" value="#{ApplicationBean.appContext}SubmissionPage.jsp"><h:outputText value="#{lbl.EditItem_lnkCancel}" /></h:outputLink>
-	<tr:commandLink id="lnkImport" shortDesc="#{tip.easy_submission_btnImport}" styleClass="free_area1_p8 activeButton" action="#{EasySubmission.harvestData}"><h:outputText value="#{lbl.easy_submission_btnImport}" /></tr:commandLink>
+	<tr:commandLink id="lnkImport" shortDesc="#{tip.easy_submission_btnImport}" styleClass="free_area1_p8 activeButton" action="#{EasySubmission.harvestData}">
+		<h:outputText value="#{lbl.easy_submission_btnUpload}" rendered="#{EasySubmission.disableExternalFields}"/>
+		<h:outputText value="#{lbl.easy_submission_btnFetch}" rendered="#{EasySubmission.disableBibtexFields}"/>
+	</tr:commandLink>
 </div>
 
 </f:subview>
