--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/eSciDoc_component_css/singleElements.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/eSciDoc_component_css/singleElements.css
@@ -46,11 +46,17 @@
 	opacity: 0.9;
 	filter: alpha(opacity=90);
 	*/
-
+}
+	
 .linkBlock {
 	width: 75em;
 }
 
 .sameHeightSlave {
 	overflow-y: auto;
+}
+
+.readonlyInput {
+	background-color: transparent !important;
+	border: none;
 }
