Bugfix: PUBMAN-1506 - View Item Page: classification type always displays DDC

--- a/pubman/pubman_presentation/src/main/webapp/viewItem/ContentGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/ContentGroup.jspf
@@ -49,11 +49,11 @@
 			</span>
 		</div>
 
-<%-- DDC Subject --%>
+<%-- Subject --%>
 		<tr:iterator var="subject" value="#{ViewItemFull.pubItem.metadata.subjects}" binding="#{ViewItemFull.subjectIterator}" varStatus="index">
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine">
 				<b class="xLarge_area0_p8 endline labelLine clear">
-					&#160;<h:outputText value="#{lbl.ViewItemFull_lblDDCSubject}"/><span class="noDisplay">: </span>
+					&#160;<h:outputText value="#{subject.type}"/><span class="noDisplay">: </span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
 					<h:outputText value="#{subject.value}" converter="HTMLEscapeConverter" escape="false"/>
