--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step3Import.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step3Import.jspf
@@ -98,7 +98,10 @@
 			<!-- Subheadline ends here -->
 		</div>
 	</div>
-</div>			
+</div>
+<div id="ImgFullItem">
+	<div id="ImgFullItemLoad" class="noDisplay" style="position: fixed;"></div>
+</div>
 <div class="full_area0">
 	<div class="full_area0 fullItem">
 		<div class="full_area0 itemBlock noTopBorder">
