--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step4Manual.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step4Manual.jspf
@@ -91,7 +91,10 @@
 			<!-- Subheadline ends here -->
 		</div>
 	</div>
-</div>			
+</div>
+<div id="ImgFullItem">
+	<div id="ImgFullItemLoad" class="noDisplay" style="position: fixed;"></div>
+</div>
 <div class="full_area0">
 	<div class="full_area0 fullItem">
 		<h:panelGroup layout="block" styleClass="full_area0 easySubmissionHeader" >
