--- a/pubman/pubman_presentation/src/main/webapp/viewItem/PersOrgGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/PersOrgGroup.jspf
@@ -44,22 +44,40 @@
 				<sup>&nbsp;</sup><h:outputText value="#{lbl.ViewItemFull_lblCreators}"/><span class="noDisplay">: <br /></span>
 			</b>
 			<span class="xHuge_area0 xTiny_marginLExcl endline">
-				<tr:iterator var="creatorPerson" value="#{ViewItemFull.creatorArray}" rows="0">
-					<h:panelGroup id="txtCreatorPersonFormattedDisplay" styleClass="free_area0 creator">
-						<h:outputText value="#{creatorPerson.formattedDisplay}" escape="false"/>
-						<h:panelGroup rendered="#{creatorPerson.portfolioLink != null}">
-							&#160;
-							<h:outputLink id="lnkCreatorPersonPortfolioLink" styleClass="authorCard" value="#{creatorPerson.portfolioLink}?lang=#{InternationalizationHelper.locale}" target="_blank">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</h:outputLink>
+				<span class="free_area0 authorsGroup">
+					
+					<tr:iterator var="creatorPerson" value="#{ViewItemFull.creatorArray}" rows="#{ViewItemFull.defaultSize}" varStatus="creatorStatus"> 
+						<h:panelGroup id="txtCreatorPersonFormattedDisplay" styleClass="free_area0 creatorDisplayed clear">
+							<h:outputText value="#{creatorPerson.formattedDisplay}" escape="false"/>
+							<h:panelGroup rendered="#{creatorPerson.portfolioLink != null}">
+								&#160;
+								<h:outputLink id="lnkCreatorPersonPortfolioLink" styleClass="authorCard" value="#{creatorPerson.portfolioLink}?lang=#{InternationalizationHelper.locale}" target="_blank">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</h:outputLink>
+							</h:panelGroup>
 						</h:panelGroup>
+						<br/>
+					</tr:iterator>
+					
+					<tr:iterator var="creatorPerson" value="#{ViewItemFull.creatorArray}" varStatus="creatorStatus" first="#{ViewItemFull.defaultSize}" rows="#{ViewItemFull.creatorArraySize}" rendered="#{ViewItemFull.creatorArraySize > ViewItemFull.defaultSize}"> 
+						<h:panelGroup id="txtCreatorPersonFormattedDisplay" styleClass="free_area0 creator tiny_marginRIncl">
+							<h:outputText value="#{creatorPerson.formattedDisplay}" escape="false"/>
+							<h:panelGroup rendered="#{creatorPerson.portfolioLink != null}">
+								&#160;
+								<h:outputLink id="lnkCreatorPersonPortfolioLink" styleClass="authorCard" value="#{creatorPerson.portfolioLink}?lang=#{InternationalizationHelper.locale}" target="_blank">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</h:outputLink>
+							</h:panelGroup>
+						</h:panelGroup>
+					</tr:iterator>
+					
+					<h:panelGroup rendered="#{ViewItemFull.creatorArraySize > ViewItemFull.defaultSize}">
+						<a class="large_area0 tiny_marginRIncl showMoreAuthors" ><h:outputText value="#{lbl.adv_search_btShowMore}" /></a>
 					</h:panelGroup>
-					<h:outputText value="<br />" escape="false"/>
-				</tr:iterator>
-				<tr:iterator var="creatorOrganization" value="#{ViewItemFull.creatorOrganizationsArray}" >
-					<h:panelGroup id="txtCreatorOrganizationOrganizationName" styleClass="free_area0 creator">
-						<h:outputText value="#{creatorOrganization.organizationName}"/>
-					</h:panelGroup>
-					<h:outputText value="<br />" escape="false"/>
-				</tr:iterator>		
+					
+					<tr:iterator var="creatorOrganization" value="#{ViewItemFull.creatorOrganizationsArray}" >
+						<h:panelGroup id="txtCreatorOrganizationOrganizationName" styleClass="free_area0 creator">
+							<h:outputText value="#{creatorOrganization.organizationName}"/>
+						</h:panelGroup>
+						<h:outputText value="<br />" escape="false"/>
+					</tr:iterator>
+				</span>		
 			</span>
 		</div>
 
