i18n for "Browse". => lbl.mainMenu_lblBrowse

--- a/pubman/pubman_presentation/src/main/webapp/header/ui/SearchMenu.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/header/ui/SearchMenu.jspf
@@ -47,7 +47,7 @@
 	</h:commandLink>
 
 	<h:commandLink styleClass="small_area0_p3 organisationSearchMenu endline" id="lnkBrowseBy" title="#{tip.BrowseBy}" immediate="true" action="#{BrowseByPage.loadBrowseBy}">
-		<h:outputText value="Browse"/>
+		<h:outputText value="#{lbl.mainMenu_lblBrowse}"/>
 	</h:commandLink>
 	<!-- search Menu ends here -->
 </div>
