--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/eSciDoc_component_css/fullItem.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/eSciDoc_component_css/fullItem.css
@@ -236,6 +236,10 @@
 	width: 43.37em;
 }
 
+.itemLine .creatorDisplayed {
+	width: 43.37em;
+}
+
 .fullItem .listItemLine, .fullItem li {
 	padding-top: 0px;
 	padding-bottom: 0px;
