--- a/pubman/pubman_presentation/src/main/webapp/editItem/PersOrgGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/PersOrgGroup.jspf
@@ -145,8 +145,8 @@
 						<h:panelGroup rendered="#{creatorBean.identifierValue == null}" styleClass="xSmall_area0 authorLink">&nbsp;</h:panelGroup>
 						<span class="seperator"></span>
 						<h:panelGroup styleClass="medium_area0">
-							<tr:commandButton id="btnRemoveCreator" shortDesc="#{tip.EditItem_removeCreator}" styleClass="min_imgBtn sectionTool remove" disabled="#{EditItem.creatorCollection.creatorManager.size == 1}" immediate="true" action="#{EditItem.creatorCollection.creatorManager.removeObject}" rendered="#{genre.creator_person_organization_repeatable != 'false'}"/>
-							<tr:commandButton id="btnAddCreator" shortDesc="#{tip.EditItem_addCreator}" styleClass="min_imgBtn sectionTool add" immediate="true" action="#{EditItem.creatorCollection.creatorManager.addObject}" rendered="#{genre.creator_person_organization_repeatable != 'false'}"/>
+							<tr:commandButton id="btnRemoveCreator" shortDesc="#{tip.EditItem_removeCreator}" styleClass="min_imgBtn sectionTool remove" disabled="#{EditItem.creatorCollection.creatorManager.size == 1}" action="#{EditItem.creatorCollection.creatorManager.removeObject}" rendered="#{genre.creator_person_organization_repeatable != 'false'}"/>
+							<tr:commandButton id="btnAddCreator" shortDesc="#{tip.EditItem_addCreator}" styleClass="min_imgBtn sectionTool add" action="#{EditItem.creatorCollection.creatorManager.addObject}" rendered="#{genre.creator_person_organization_repeatable != 'false'}"/>
 						</h:panelGroup>
 					</h:panelGroup>
 					
