--- a/pubman/pubman_presentation/src/main/webapp/editItem/PersOrgGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/PersOrgGroup.jspf
@@ -60,8 +60,9 @@
 					</span>
 				</h:panelGroup>
 	
-				<%--Copy&Paste Organisations for Authors--%>	
+				<%--Copy&Paste Organisations for Authors--%>
 				<tr:iterator id="iterCopyPasteOrganisationAuthors" var="pasteOrga" value="#{EditItemSessionBean.authorCopyPasteOrganizationsCreatorBean.personOrganisationManager.objectDM}">
+					<h:panelGroup styleClass="suggestAnchor">
 						<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder">
 							<b class="xLarge_area0_p8 endline labelLine clear">
 							&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="false" />
@@ -72,15 +73,13 @@
 									<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.creator_person_organization_creator_organizations_organization_name_optional != 'true'}" />
 									<h:outputText value="#{genre.creator_person_organization_creator_organizations_organization_name_label}" converter="GenreLabelConverter" />
 								</h:panelGroup>
-								<h:inputText id="inpPasteOrgaName" styleClass="quad_txtInput" value="#{pasteOrga.name.value}"/>
-							</span>
-							<span class="large_area0_p8 lineToolSection">
-								<tr:commandButton id="btnSelectOrga" styleClass="free_txtBtn groupBtn" text="#{lbl.EditItem_btSelect}" shortDesc="#{tip.EditItem_btSelect}" action="#{EditItemSessionBean.authorCopyPasteOrganizationsCreatorBean.selectPersonOrganisation}" />
+								<h:inputText id="inpPasteOrgaName" styleClass="quad_txtInput organizationSuggest organizationName" value="#{pasteOrga.name.value}"/>
+								<h:inputText id="inpPasteOrgaIdentifier" styleClass="noDisplay organizationIdentifier" value="#{pasteOrga.identifier}"/>
 							</span>
 						</h:panelGroup>
 						<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder">
 							<b class="xLarge_area0_p8 endline labelLine clear">
-							&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.creator_person_organization_creator_organizations_organization_address_optional != 'true'}" />
+							&#160;<h:outputText styleClass="mandatory organizationAddress" title="#{msg.mandatoryField}" value="*" rendered="#{genre.creator_person_organization_creator_organizations_organization_address_optional != 'true'}" />
 								<span class="noDisplay"></span>
 							</b>
 							<span class="xHuge_area0 xTiny_marginLExcl endline">
@@ -91,7 +90,8 @@
 								<h:commandButton id="btnRemoveOrganisation" styleClass="min_imgBtn groupTool remove" value=" " title="#{tip.EditItem_removeOrga}" disabled="#{EditItemSessionBean.authorCopyPasteOrganizationsCreatorBean.personOrganisationManager.size == 1}" action="#{EditItemSessionBean.authorCopyPasteOrganizationsCreatorBean.personOrganisationManager.removeObject}" rendered="#{genre.creator_person_organization_creator_organizations_repeatable != 'false'}"/>
 							</span>
 						</h:panelGroup>
-					</tr:iterator>
+					</h:panelGroup>
+				</tr:iterator>
 				<h:panelGroup styleClass="large_area0_p8 sectionToolSection">
 					<h:commandButton id="btnAddAuthors" title="#{tip.EditItem_btnAddAuthors}" styleClass="free_txtBtn groupBtn sectionTool" value="#{lbl.EditItem_btnAddAuthors}" action="#{EditItem.addCreatorString}" />
 				</h:panelGroup>
@@ -165,7 +165,7 @@
 						<h:inputText id="inpcreator_organization_name_optional" styleClass="huge_txtInput organizationSuggest organizationName" value="#{creatorBean.creator.organization.name.value}" rendered="#{!(genre.creator_person_organization_creator_organizations_organization_name_display == 'false' && genre.creator_person_organization_creator_organizations_organization_name_form_id == 'full-submission' || genre.creator_person_organization_creator_organizations_organization_name_display == 'false' && genre.creator_person_organization_creator_organizations_organization_name_form_id == 'all')}"/>
 						<h:inputText id="inpcreator_organization_identifier_optional" styleClass="noDisplay organizationIdentifier" value="#{creatorBean.creator.organization.identifier}"/>
 						<span class="small_area0">&nbsp;</span>
-						<h:outputLink styleClass="small_area0 ouCard ouLink" rendered="#{creatorBean.creator.organization.identifier != null}" value="#" onclick="openCenteredWindow('AffiliationDetailPage.jsp?id=#{creatorBean.identifierValue}', 980, 400, 'Details');return false">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h:outputLink>
+						<h:outputLink styleClass="small_area0 ouCard ouLink" rendered="#{creatorBean.creator.organization.identifier != null}" value="#" onclick="openCenteredWindow('AffiliationDetailPage.jsp?id=#{creatorBean.creator.organization.identifier}', 980, 400, 'Details');return false">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h:outputLink>
 						<h:panelGroup rendered="#{creatorBean.creator.organization.identifier == null}" styleClass="xSmall_area0 ouLink">&nbsp;</h:panelGroup>
 						<span class="seperator"></span>
 						<h:panelGroup styleClass="medium_area0">
